--- a/Desbravadores-site/public/index.html
+++ b/Desbravadores-site/public/index.html
@@ -9,25 +9,33 @@
 <body>
     <div class="header">
         <div class="conteiner">
-            <div class="conteiner-inicial">
-                <video src=""></video>
-                <ul class="nav-bar">
-                    <img src="https://files.adventistas.org/institucional/pt/sites/20/2013/03/18160828/D1.png" alt="logo-desbravadores">
-                    <li>
-                        <a href="#">Início</a>
-                    </li>
-                    <li>
-                        <a href="historia.html">História</a>
-                    </li>
-                    <li>
-                        <a href="sobre.html">Sobre mim</a>
-                    </li>
-                    <li>
-                        <a href="login.html">Login</a>
-                    </li>
-                </ul>
+            <div class="conteiner-conteudo">
+
+                <section>
+                    <div class="conteiner-inicial">
+                        <video src="assets/video/campori2.webm" autoplay loop muted></video>
+                    </div>
+                    <ul class="nav-bar">
+                        <img src="assets/icon/Logo-desbravadores.webp" alt="logo-desbravadores">
+                        <li>
+                            <a href="#">Início</a>
+                        </li>
+                        <li>
+                            <a href="historia.html">História</a>
+                        </li>
+                        <li>
+                            <a href="sobre.html">Sobre mim</a>
+                        </li>
+                        <div class="login">
+                            <li>
+                                <a href="login.html">Login</a>
+                            </li>
+                        </div>
+                    </ul>
+                    <p>O amor de Cristo me motiva!</p>
+                </section>
             </div>
-        </div>
+            </div>
 </div>
 </body>
 </html>
