Atualizando o html da página inicial quase que completo(só falta o alguns conteudos nos ideais, os brasoes dos camporis e o footer), o css falta da mentade para baixo do css.

--- a/Desbravadores-site/public/index.html
+++ b/Desbravadores-site/public/index.html
@@ -10,10 +10,9 @@
     <div class="header">
         <div class="conteiner">
             <div class="conteiner-conteudo">
-
                 <section>
                     <div class="conteiner-inicial">
-                        <video src="assets/video/campori2.webm" autoplay loop muted></video>
+                      <video src="" autoplay loop muted></video>
                     </div>
                     <ul class="nav-bar">
                         <img src="assets/icon/Logo-desbravadores.webp" alt="logo-desbravadores">
@@ -33,7 +32,67 @@
                         </div>
                     </ul>
                     <p>O amor de Cristo me motiva!</p>
+                    <div class="gradiente"></div>
                 </section>
+            </div>
+            <div class="oque">
+                <h1>O que é?</h1>
+                <div class="o_que_text">
+                    <p>É um ministério da igreja Adventista do sétimo dia que promove atividades de crescimento tanto espiritual quanto pessoal. 
+                        E, semelhante aos escoteiros, promove acampamentos, tanto regionais, chamados de campori, onde somente os clubes da 
+                        determinada região participa, quanto locais, onde o próprio clube promove o acampamento.
+                        O clube de Desbravadores traz consigo ideais que os define: Voto, Lei dos desbravadores, Alvo, Lema, Objetivo, Lema do 
+                        clube(se houver), Voto de Fidelidade à Bíblia.</p>
+                        <div class="imagem_oque">
+                            <img src="assets/imgs/inicial1.png" alt="">
+                        </div>
+                </div>
+            </div>
+            <div class="campori">
+                <h1>Campori</h1>
+                <div class="camopori_text">
+                    <p>Os camporis são "super acampamentos" que podem ser realizados por região, união ou até mesmo a divisão inteira em algum lugar no interior. 
+                        Nos camporis são feitos cultos na parte da manhã, nas arenas e na parte da tarde são realizadas algumas atividades, semelhantes à gincana, 
+                        onde o clube acumula pontos, ou ao invés dessas atividades podem ter algumas ações sociais, desfiles ou projetos comunitários.
+                        Os camporis por região são realizados a cada 2 anos, os da união são feitos a cada 4 anos e os da divisão a cada 10 anos.</p>
+                        <div class="imagem_campori">
+                            <img src="" alt="">
+                        </div>
+                </div>
+            </div>
+            <div class="camporis">
+                <h1>Camporis.</h1>
+                <div class="brasoes_camporis">
+                    <img src="" alt="">
+                </div>
+                <div class="gradiente"></div>
+            </div>
+            <div class="ideais">
+                <h1>Ideais</h1>
+                <div class="box-ideais">
+                    <div class="conteiner">
+                        <div class="box-voto">
+                            <h1>Voto</h1>
+                        </div>
+                        <div class="box-lei">
+                            <h1>Lei</h1>
+                        </div>
+                        <div class="box-alvo">
+                            <h1>Alvo</h1>
+                        </div>
+                    </div>
+                    <div class="conteiner2">
+                        <div class="box-lema">
+                            <h1>Lema</h1>
+                        </div>
+                        <div class="box-objetivo">
+                            <h1>Objetivo</h1>
+                        </div>
+                        <div class="box-fidelidade">
+                            <h1>Voto de Fidelidade à Bíblia</h1>
+                        </div>
+                    </div>
+                </div>
             </div>
             </div>
 </div>
