fazendo a pagina até os ideais(faltando agora somente o footer e arrumar os brasoes)

--- a/Desbravadores-site/public/index.html
+++ b/Desbravadores-site/public/index.html
@@ -50,46 +50,70 @@
             </div>
             <div class="campori">
                 <h1>Campori</h1>
-                <div class="camopori_text">
+                <div class="campori_text">
+                    <div class="imagem_campori">
+                        <img src="assets/imgs/inicial 2.png" alt="">
+                    </div>
                     <p>Os camporis são "super acampamentos" que podem ser realizados por região, união ou até mesmo a divisão inteira em algum lugar no interior. 
                         Nos camporis são feitos cultos na parte da manhã, nas arenas e na parte da tarde são realizadas algumas atividades, semelhantes à gincana, 
                         onde o clube acumula pontos, ou ao invés dessas atividades podem ter algumas ações sociais, desfiles ou projetos comunitários.
                         Os camporis por região são realizados a cada 2 anos, os da união são feitos a cada 4 anos e os da divisão a cada 10 anos.</p>
-                        <div class="imagem_campori">
-                            <img src="" alt="">
-                        </div>
+                </div>
+                <div class="titulo2">
+                    <h1>Camporis.</h1>
                 </div>
             </div>
             <div class="camporis">
-                <h1>Camporis.</h1>
                 <div class="brasoes_camporis">
-                    <img src="" alt="">
+                    <img src="assets/imgs/brasoes campori.png" alt="">
                 </div>
                 <div class="gradiente"></div>
             </div>
             <div class="ideais">
                 <h1>Ideais</h1>
                 <div class="box-ideais">
-                    <div class="conteiner">
+                    <div class="conteiner1">
                         <div class="box-voto">
-                            <h1>Voto</h1>
+                            <img src="assets/imgs/voto.png" alt="">
+                            <h2>Voto</h2>
+                            <p>Pela graça de Deus, serei puro, bondoso e leal; 
+                                guardarei a lei do Desbravador, serei servo de Deus 
+                                e amigo de todos
+                            </p>
                         </div>
                         <div class="box-lei">
-                            <h1>Lei</h1>
+                            <img src="assets/imgs/lema.png" alt="">
+                            <h2>Lei</h2>
+                            <p>A lei do Desbravador ordena-me:<br>
+                                Observar a devoção matinal;<br>
+                                Cumprir a fielmente parte que me correspode;<br>
+                                Ser cortes e obediente;<br>
+                                Cuidar de meu corpo;<br>
+                                Andar com reverencia na casa de Deus;<br>
+                                Ter sempre um cântico no coração;<br>
+                                Ir aonde Deus mandar.</p>
                         </div>
                         <div class="box-alvo">
-                            <h1>Alvo</h1>
+                            <img src="assets/imgs/alvo.png" alt="">
+                            <h2>Alvo</h2>
+                            <p>A mensagem do advento a todo o mundo na minha geração.</p>
                         </div>
                     </div>
                     <div class="conteiner2">
                         <div class="box-lema">
-                            <h1>Lema</h1>
+                            <img src="assets/imgs/lema.png" alt="">
+                            <h2>Lema</h2>
+                            <p>O amor de Cristo me motiva</p>
                         </div>
                         <div class="box-objetivo">
-                            <h1>Objetivo</h1>
+                            <img src="assets/imgs/objetivo.png" alt="">
+                            <h2>Objetivo</h2>
+                            <p>Salvar do pecado e guiar no serviço</p>
                         </div>
                         <div class="box-fidelidade">
-                            <h1>Voto de Fidelidade à Bíblia</h1>
+                            <img src="assets/imgs/fidelidade.png" alt="">
+                            <h2>Voto de Fidelidade à Bíblia</h2>
+                            <p>Prometo fidelidade à Bíblia, à sua mensagem, de um Salvador crucificado ressurreto e prestes a vir, doador de vida e liberdade a todos que nEle crêem.</p>
                         </div>
                     </div>
                 </div>
