subindo pagina historia(só faltando estilizar o footer e melhorar a linha do tempo)

--- a/Desbravadores-site/public/index.html
+++ b/Desbravadores-site/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aventura</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
@@ -60,7 +60,7 @@
                         Os camporis por região são realizados a cada 2 anos, os da união são feitos a cada 4 anos e os da divisão a cada 10 anos.</p>
                 </div>
                 <div class="titulo2">
-                    <h1>Camporis.</h1>
+                    <h2>Camporis.</h2>
                 </div>
             </div>
             <div class="camporis">
@@ -116,6 +116,25 @@
                             <p>Prometo fidelidade à Bíblia, à sua mensagem, de um Salvador crucificado ressurreto e prestes a vir, doador de vida e liberdade a todos que nEle crêem.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="conteiner">
+                    <img src="assets/imgs/Logo-desbravadores.webp" alt="">
+                    <p>© 2025 Todos os direitos reservados.</p>
+                </div>
+                <div class="box-nav">
+                    <ul class="box-nav-ul">
+                        <li>
+                            <a href="#">Início</a><br><br>
+                        </li>
+                        <li>
+                            <a href="historia.html">História</a><br><br>
+                        </li>
+                        <li>
+                            <a href="sobre.html">Sobre mim</a><br><br>
+                        </li>
+                    </ul>
                 </div>
             </div>
             </div>
