--- a/Desbravadores-site/public/historia.html
+++ b/Desbravadores-site/public/historia.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aventura</title>
     <link rel="stylesheet" href="styles/historia.css">
+    <link rel="" href="">
 </head>
 <body>
     <div class="header">
         <div class="conteiner">
             <div class="conteiner-conteudo">
                     <ul class="nav-bar">
-                        <img src="assets/icon/Logo-desbravadores.webp" alt="logo-desbravadores">
+                        <img src="assets/icon/logo-a-melhor-aventura.png" alt="logo-desbravadores">
                         <li>
-                            <a href="#">Início</a>
+                            <a href="index.html">Início</a>
                         </li>
                         <li>
-                            <a href="historia.html">História</a>
+                            <a href="#">História</a>
                         </li>
                         <li>
                             <a href="sobre.html">Sobre mim</a>
@@ -99,16 +100,16 @@
             </div>
             <div class="footer">
                 <div class="conteiner">
-                    <img src="assets/imgs/Logo-desbravadores.webp" alt="">
+                    <img src="assets/icon/logo-a-melhor-aventura.png" alt="">
                     <p>© 2025 Todos os direitos reservados.</p>
                 </div>
                 <div class="box-nav">
                     <ul class="box-nav-ul">
                         <li>
-                            <a href="#">Início</a><br><br>
+                            <a href="index.html">Início</a><br><br>
                         </li>
                         <li>
-                            <a href="historia.html">História</a><br><br>
+                            <a href="#">História</a><br><br>
                         </li>
                         <li>
                             <a href="sobre.html">Sobre mim</a><br><br>
