Pagina sobre mim terminada, faltando somente as imagens

--- a/Desbravadores-site/public/sobre.html
+++ b/Desbravadores-site/public/sobre.html
@@ -34,40 +34,32 @@
             <div class="quem">
                 <h1>Quem eu sou?</h1>
                 <div class="quem_text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi consequuntur laudantium dicta cupiditate ratione praesentium, quam eius provident 
-                        rerum dolores neque placeat minus illo, ipsa, velit deserunt aperiam itaque ex!</p>
+                    <p>Meu nome é Luiz Souza e tenho 18 anos, eu fui apresentado ao clube de desbravadores em 2023, chamado Tamoios, pelo meu amigo chamado Thiago e desde então me apaixonei pelo clube. 
+                        Acredito que o clube de desbravadores é mais que um lugar pra acampar, mas sim uma família que te ajuda a se desenvolvar das mais variadas formas, física, mental e espiritual. Hoje em dia estou 
+                        no clube Centauro que tem me proporcionado muitos momentos bons também.</p>
                         <div class="imagem_quem">
-                            <img src="" alt="">
+                            <img src="assets/imgs/Imagem-de-mim.jpg" alt="">
                         </div>
                 </div>
             </div>
             <div class="clube-desbravadores">
                 <h1>Por que o clube de Desbravadores?</h1>
                 <div class="clube-desbravadores_text">
-                    <div class="imagem_clube-desbravadores">
-                        <img src="" alt="">
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam delectus temporibus doloremque nulla ullam dolorem explicabo omnis iusto odit aspernatur odio, 
-                        saepe cum vel officiis harum nisi, quia necessitatibus hic?</p>
+                    <p>Por que o clube de desbravadores me ajudou a me aproximar mais a Deus, tendo em vista que eles promovem ações evangelísticas, que consequentemente me ajudaram na decisão do batismo.
+                        Além disso, outro motivo é que eles me ajudaram a lidar com a vida, eu sou uma pessoa muito ansiosa e eu havia perdido o meu tio em 2022 e os meus pets em 2023 e isso me deixou muito triste, 
+                        quando eu me reunia com eles eu me alegrava tanto que parecia que toda a ansiedade que eu sentia naquele momentos sumia.</p>
                 </div>
             </div>
             <div class="clubes">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia animi autem nihil dicta temporibus hic, facilis praesentium ut tempora corporis rem, architecto consectetur 
-                    dignissimos, iusto recusandae laborum debitis unde beatae.</p>
+                <p>Já participei do clube Tamoios como já foi citado anteriormente, entrei nesse clube em 2023, com 16 anos, e fiquei até o final de 2024.
+                    E atualmente estou participando do clube Centauro
+                </p>
+                    <img src="assets/imgs/Tamoios.jpg" alt="Imagem clube Tamoios">
                     <img src="" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime quas molestias eaque ut quod, cupiditate rerum animi quia architecto dolor ipsum omnis ex temporibus 
-                    perspiciatis doloribus provident fugit magnam quibusdam!</p>
-                    <img src="" alt="">
-                <div class="impacto">
-                    <h1>O que me impactou?</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur necessitatibus sed quibusdam, commodi porro repellat quaerat dolore doloribus inventore, assumenda delectus a, 
-                        eos perspiciatis mollitia ratione nam minus distinctio dicta?</p>
-                </div>
             </div>
             <div class="footer">
                 <div class="conteiner">
                     <img src="assets/icon/logo-a-melhor-aventura.png" alt="">
-                    <p>© 2025 Todos os direitos reservados.</p>
                 </div>
                 <div class="box-nav">
                     <ul class="box-nav-ul">
