colocando a pagina principal do usuario

--- a/Desbravadores-site/public/cadastro.html
+++ b/Desbravadores-site/public/cadastro.html
@@ -25,6 +25,8 @@
                         <div id="validar_senha"></div>
                         <p>Digite novamente a senha:</p>
                         <input type="password" id="ipt_senhanovamente" placeholder="*********">
+                        <p>Informe sua data de nescimento: </p>
+                        <input type="date" id="ipt_dtNasc">
                         <p>Qual clube que você frequenta?</p>
                         <select id="ipt_clube">
                             <option value="#">Selecione um clube</option>
