Colocando imagens na dashboard

--- a/Desbravadores-site/public/dashboard.html
+++ b/Desbravadores-site/public/dashboard.html
@@ -28,27 +28,27 @@
             </ul>
             <div id="cards">
                 <div class="Amigo" onclick="amigo()">
-                    <img src="" alt="">
+                    <img src="assets/imgs/ClasseAmigo.jpeg" alt="">
                     <h2>Classe de Amigo</h2>
                 </div>
                 <div class="Companheiro">
-                    <img src="" alt="">
+                    <img src="assets/imgs/ClasseCompanheiro.jpeg" alt="">
                     <h2>Classe de Companheiro</h2>
                 </div>
                 <div class="Pesquisador">
-                    <img src="" alt="">
+                    <img src="assets/imgs/ClassePesquisador.jpeg" alt="">
                     <h2>Classe de Pesquisador</h2>
                 </div>
                 <div class="Pioneiro">
-                    <img src="" alt="">
+                    <img src="assets/imgs/ClassePioneiro.jpeg" alt="">
                     <h2>Classe de Pioneiro</h2>
                 </div>
                 <div class="Excursionista">
-                    <img src="" alt="">
+                    <img src="assets/imgs/ClasseExcursionista.jpeg" alt="">
                     <h2>Classe de Excursionista</h2>
                 </div>
                 <div class="Guia">
-                    <img src="" alt="">
+                    <img src="assets/imgs/ClasseGuia.jpeg" alt="">
                     <h2>Classe de Guia</h2>
                 </div>
             </div>
