--- a/Desbravadores-site/public/login.html
+++ b/Desbravadores-site/public/login.html
@@ -1,39 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Melhor Aventura</title>
-    <link rel="stylesheet" href="styles/login.css">
+
+    <title>Aventura | Login</title>
+
+    <script src="./js/sessao.js"></script>
+
+    <link rel="stylesheet" href="./styles/login.css">
+    <link rel="icon" href="./assets/icon/favicon2.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
+
 <body>
     <div class="header">
         <div class="conteiner">
-            <div class="conteiner-geral">
-                <div class="box">
+    <div class="login">
+        <div class="alerta_erro">
+            <div class="card_erro" id="cardErro">
+                <span id="mensagem_erro"></span>
+            </div>
+        </div>
+        <div class="box">
                     <div class="campos">
                         <h1>Login</h1>
                         <p>Endereço de email:</p>
                         <input type="text" id="ipt_email" placeholder="Email...">
                         <p>Senha:</p>
                         <input type="password" id="ipt_senha" placeholder="senha...">
-                        <button onclick="login()">Entrar</button>
-                        <div id="validar_login"></div>
+                        <button onclick="entrar()">Entrar</button>
                         <p>Esqueceu a senha?</p>
                         <div class='cadastro'>
                             <p>Ainda não é cadastrado? </p><a href="cadastro.html">Cadastre-se</a>
                         </div>
                         <a href="index.html">🔙</a>
+                    </div>
+
+                <div id="div_aguardar" class="loading-div">
+                    <img src="./assets/circle-loading.gif" id="loading-gif">
                 </div>
-                </div>
-            </div>
-        </div>
+
+                <div id="div_erros_login"></div>
     </div>
+ </div>
 </div>
 </body>
+
 </html>
-</body>
-</html>
+
 <script>
-    
+
+
+    function entrar() {
+        aguardar();
+
+        var emailVar = ipt_email.value;
+        var senhaVar = ipt_senha.value;
+
+        if (emailVar == "" || senhaVar == "") {
+            cardErro.style.display = "block"
+            mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
+            finalizarAguardar();
+            return false;
+        }
+        else {
+            setInterval(sumirMensagem, 5000)
+        }
+
+        console.log("FORM LOGIN: ", emailVar);
+        console.log("FORM SENHA: ", senhaVar);
+
+        fetch("/usuarios/autenticar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                emailServer: emailVar,
+                senhaServer: senhaVar
+            })
+        }).then(function (resposta) {
+            console.log("ESTOU NO THEN DO entrar()!")
+
+            if (resposta.ok) {
+                console.log(resposta);
+
+                resposta.json().then(json => {
+                    console.log(json);
+                    console.log(JSON.stringify(json));
+                    sessionStorage.EMAIL_USUARIO = json.email;
+                    sessionStorage.NOME_USUARIO = json.nome;
+                    sessionStorage.ID_USUARIO = json.id;
+                    // sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
+
+                    setTimeout(function () {
+                        location.href = "/dashboard.html";
+                    }, 1000); // apenas para exibir o loading
+
+                });
+
+            } else {
+
+                console.log("Houve um erro ao tentar realizar o login!");
+
+                resposta.text().then(texto => {
+                    console.error(texto);
+                    finalizarAguardar(texto);
+                });
+            }
+
+        }).catch(function (erro) {
+            console.log(erro);
+        })
+
+        return false;
+    }
+
+    function sumirMensagem() {
+        cardErro.style.display = "none"
+    }
+
 </script>
