Arrumando o login e direcionando para a pagina dashboard e adicionei o quiz

--- a/Desbravadores-site/public/login.html
+++ b/Desbravadores-site/public/login.html
@@ -97,11 +97,12 @@
                     // sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
 
                     setTimeout(function () {
-                        location.href = "/dashboard.html";
+                        console.log("Redirecionando para dashboard.html");
+                        window.location = "./dashboard.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
-
+            
             } else {
 
                 console.log("Houve um erro ao tentar realizar o login!");
