--- a/Desbravadores-site/public/quiz.html
+++ b/Desbravadores-site/public/quiz.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo - Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/quiz.css">
 </head>
     <div class="header">
         <div class="conteiner">
             <ul class="nav-bar">
                 <li>
                     <div class="box">
-                        <a href="#">inicio</a>
+                        <a href="dashboard.html">inicio</a>
                     </div>
                 </li>
                 <li>
                     <div class="box1">
-                        <a href="quiz.html">Quiz</a>
+                        <a href="#">Quiz</a>
                     </div>
                 </li>
                 <li>
